[package]
name = "energy2mqtt"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Heß <e2m@hessdev.de>"]
description = "Export your energy data to MQTT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
actix-web = "4.12.1"
actix-files = "0.6.9"
actix-ws =  "0.3.1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.8"
rumqttc = "0.25.1"
futures-util = "0.3.31"
lazy_static = "1.3"
rmodbus = "0.12.2"
url = "2.5.8"
utoipa = "5"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
hex = "0.4"
crc16 = "0.4.0"
aes = "0.8.4"
cbc = { version ="0.1.2", features = [ "alloc" ] }
evalexpr = "13.1.0"
walkdir = "2.5.0"
regex = "1.12.2"
base64 = "0.22.1"
knx-rust = "0.0.1"

[dev-dependencies]
tempfile = "3.24.0"
actix-rt = "2.8.0"

[[bin]]
name = "energy2mqtt"
path = "src/main.rs"

[lib]
name = "energy2mqtt"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size.

