[package]
name = "energy2mqtt"
version = "0.1.0"
edition = "2021"
authors = ["Sebastian Heß <e2m@hessdev.de>"]
description = "Export your energy data to MQTT"

[features]
api = [ "dep:thiserror", "dep:actix-web", "dep:actix-files", "dep:actix-ws", "dep:utoipa", "dep:utoipa-swagger-ui" ]
iec62056 = [ "dep:thiserror" ]
knx = [ "dep:knx-rust", "dep:thiserror" ]
modbus = [ "dep:rmodbus", "dep:evalexpr" ]
sml = [ "dep:hex" ]
oms = [ "dep:thiserror", "dep:aes", "dep:cbc", "dep:crc16", "dep:hex" ]
victron = [ ]
zenner-datahub = [ "dep:base64", "tokio/process" ]


default = [ "api", "iec62056", "knx", "modbus", "sml", "oms", "victron", "zenner-datahub" ]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
rumqttc = "0.25.1"

uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = [ "serde" ] }
tokio = { version = "1.49.0", features = [ "sync", "rt-multi-thread", "macros" ] }
log = "0.4.29"
env_logger = "0.11.8"
futures-util = "0.3.31"
lazy_static = "1.3"
walkdir = "2.5.0"
regex = "1.12.2"

# Common dependencies
thiserror = { version = "2.0.18", optional = true }

# API dependencies
actix-web = { version = "4.12.1", optional = true }
actix-files = { version = "0.6.9", optional = true }
actix-ws = { version = "0.3.1", optional = true }
utoipa = { version = "5", optional = true }
utoipa-swagger-ui = { version = "9", features = ["actix-web"], optional = true }

# Modbus dependencies
rmodbus = { version = "0.12.2", optional = true }
evalexpr = { version = "13.1.0", optional = true }

# KNX dependencies
knx-rust = { version = "0.0.1", optional = true }

# OMS dependencies
aes = { version = "0.8.4", optional = true }
cbc = { version ="0.1.2", features = [ "alloc" ], optional = true }
crc16 = { version = "0.4.0", optional = true }

# OMS and SML
hex = { version = "0.4", optional = true }

# ZENNER Datahub dependencies
base64 = { version = "0.22.1", optional = true }



[dev-dependencies]
tempfile = "3.24.0"
actix-rt = "2.8.0"

[[bin]]
name = "energy2mqtt"
path = "src/main.rs"

[lib]
name = "energy2mqtt"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size.

